# py-algo-ds

./: .pre-commit-config.yaml  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
py_algo_ds/: main.py
py_algo_ds/algorithms/: basic_recursion.py  bfs.py  binary_search.py  bubble_sort.py  level_order_traversal.py  linear_search.py  selection_sort.py  sorts.py
py_algo_ds/datastructures/: arrays.py  binary_search_tree.py
py_algo_ds/problems/: crystal_balls.py  first_true.py  integer_root.py  is_anagram.py  is_palindrome.py  move_zeros.py  remove_duplicates.py  reverse_vowels.py  shortest_distance.py  two_number_sum.py
src/recursion/: count.py  factorial.py  fib.py  max.py  sum.py
src/search/: binary_search.py
src/sort/: quick_sort.py  selection_sort.py
src/tests/: test_binary_search.py
tests/: test_main.py  test_mock.py
tests/algorithms/: test_basic_recursion.py  test_bfs.py  test_binary_search.py  test_bubble_sort.py  test_level_order_traversal.py  test_linear_search.py  test_search.py  test_sort.py  test_sorts.py
tests/datastructures/: test_arrays.py  test_bst.py
tests/problems/: test_crystal_balls.py  test_first_true.py  test_integer_root.py  test_is_anagram.py  test_is_palindrome.py  test_move_zeros.py  test_remove_duplicates.py  test_reverse_vowels.py  test_shortest_distance.py  test_two_number_sum.py
tests/recursion/: test_count.py  test_factorial.py  test_fib.py  test_max.py  test_sum.py
tests/search/: test_binary_search.py
tests/sort/: test_quick_sort.py  test_selection_sort.py
