[tool.poetry]
name = "py-algo-ds"
version = "0.1.0"
description = ""
authors = ["Asjad Jawed Siddiqui <asjadjawed@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_algo_ds" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pylint = "^2.15.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
